# iter_utils

./: .gitignore  README.md  coverage.json  pyproject.toml  tox.ini
iter_utils/: __init__.py
iter_utils/src/: flatten.py  flatten_xml.py  patterns.py
iter_utils/tests/: test_flatten_dict.py  test_flatten_json.py  test_flatten_xml.py  test_patterns.py
